# Anonymous-Chat

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md
.github/workflows/: android-ci.yml  android-release.yml  android.yml  rust-ci.yml
android/: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android/.cline-logs/: jstack-23783-$(date +%Y%m%d-%H%M%S).txt  jstack-23783-20260220-173959.txt  jstack-25682-$(date +%Y%m%d-%H%M%S).txt  jstack-30817-20260220-193340.txt
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/phantomnet/app/: PhantomApp.kt
android/app/src/main/kotlin/com/phantomnet/app/domain/: NetworkStatus.kt
android/app/src/main/kotlin/com/phantomnet/app/domain/model/: Models.kt
android/app/src/main/kotlin/com/phantomnet/app/service/: CallService.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/: MainActivity.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/backup/: ShardWizardScreen.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/call/: CallOrchestratorScreen.kt  CallViewModel.kt  InCallAudioScreen.kt  InCallVideoScreen.kt  IncomingCallScreen.kt  OutgoingCallScreen.kt  PreCallPrivacyPanel.kt  RouteDetailsBottomSheet.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/chat/: ChatScreen.kt  ChatViewModel.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/contacts/: AddContactScreen.kt  BarcodeAnalyzer.kt  ContactsViewModel.kt  MyQrCodeScreen.kt  QrGenerator.kt  QrScannerScreen.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/discover/: DiscoveryScreen.kt  DiscoveryViewModel.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/home/: ConversationListScreen.kt  ConversationListViewModel.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/privacy/: PrivacyDashboardScreen.kt  PrivacyDashboardViewModel.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/rooms/: DcNetRoomScreen.kt  RoomViewModel.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/stealth/: DecoyCalculatorScreen.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/kotlin/com/phantomnet/app/ui/vault/: VaultScreen.kt
android/app/src/main/kotlin/com/phantomnet/app/worker/: DhtPollingWorker.kt  MessagePurgeWorker.kt
android/app/src/main/kotlin/com/phantomnet/core/: PhantomCore.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/kotlin/com/phantomnet/app/domain/: NetworkStatusTest.kt
android/app/src/test/kotlin/com/phantomnet/app/ui/chat/: ChatViewModelTest.kt
android/core/crypto/: build.gradle.kts
android/core/crypto/src/main/kotlin/com/phantomnet/core/crypto/: NativeMediaEngine.kt  SignalBridge.kt
android/core/database/: build.gradle.kts
android/core/database/src/main/kotlin/com/phantomnet/core/database/: PhantomDatabase.kt
android/core/database/src/main/kotlin/com/phantomnet/core/database/dao/: Daos.kt
android/core/database/src/main/kotlin/com/phantomnet/core/database/entity/: Entities.kt
android/core/database/src/main/kotlin/com/phantomnet/core/database/model/: Models.kt
android/core/database/src/main/kotlin/com/phantomnet/core/database/repository/: CallRepository.kt  ConversationRepository.kt  RoomRepository.kt
android/core/identity/: build.gradle.kts
android/core/identity/src/main/kotlin/com/phantomnet/core/identity/: IdentityManager.kt  StealthManager.kt
android/core/network/: build.gradle.kts
android/core/network/src/main/kotlin/com/phantomnet/core/network/: DhtService.kt  MailboxManager.kt  MeshService.kt  SecureMessagingProcessor.kt  TorService.kt
android/feature/onboarding/: build.gradle.kts
android/feature/onboarding/src/main/kotlin/com/phantomnet/feature/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt  SplashScreen.kt
android/feature/settings/: build.gradle.kts
android/feature/settings/src/main/kotlin/com/phantomnet/feature/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/feature/sync/: build.gradle.kts
android/feature/sync/src/main/kotlin/com/phantomnet/feature/sync/: BarcodeAnalyzer.kt  SyncQrGenerator.kt  SyncScreen.kt  SyncUiState.kt  SyncViewModel.kt
bootstrap/: Dockerfile  go.mod  go.sum  main.go
docs/: CALLING_FRAME.md  CALLING_LAYOUT.md  CALLING_ORCHESTRATION.md  FRAME_V2.md  LAYOUT.md  LAYOUT_V2.md  ORCHESTRATION.md  ORCHESTRATION_V2.md  PROTOCOL.md  STEALTH_FRAME.md  SYNC_FRAME.md  TESTSPRITE_STAGE_PLAN.md  WORLD.md  WORLD_V2.md
proto/: phantom.proto
rust/kademlia-dht/: Cargo.toml
rust/kademlia-dht/src/: lib.rs
rust/libsignal-ffi/: Cargo.toml
rust/libsignal-ffi/src/: lib.rs
rust/mesh-protocol/: Cargo.toml
rust/mesh-protocol/src/: lib.rs
rust/phantom-audit/: Cargo.toml
rust/phantom-audit/src/: lib.rs
rust/phantom-core/: Cargo.toml  build.rs
rust/phantom-core/src/: lib.rs
rust/phantom-dcnet/: Cargo.toml
rust/phantom-dcnet/src/: lib.rs
rust/phantom-mixnet/: Cargo.toml
rust/phantom-mixnet/src/: lib.rs  sphinx.rs
rust/phantom-mls/: Cargo.toml
rust/phantom-mls/src/: lib.rs
rust/phantom-pqc/: Cargo.toml
rust/phantom-pqc/src/: lib.rs
rust/phantom-psi/: Cargo.toml
rust/phantom-psi/src/: lib.rs
rust/phantom-sentinel/: Cargo.toml
rust/phantom-sentinel/src/: lib.rs
rust/phantom-sharding/: Cargo.toml
rust/phantom-sharding/src/: lib.rs
rust/tor-client/: Cargo.toml
rust/tor-client/src/: lib.rs
scripts/: build_android_core.sh
