[workspace]
members = [
    "rust/libsignal-ffi",
    "rust/kademlia-dht",
    "rust/tor-client",
    "rust/mesh-protocol",
    "rust/phantom-mixnet",
    "rust/phantom-mls",
    "rust/phantom-pqc",
    "rust/phantom-psi",
    "rust/phantom-core",
    "rust/phantom-sharding",
    "rust/phantom-dcnet",
    "rust/phantom-audit",
    "rust/phantom-sentinel",
]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization (cross-crate dead code elimination)
codegen-units = 1   # Single codegen unit for maximum optimization
strip = true        # Strip symbols at link time
panic = "abort"     # Smaller binary — no unwinding tables
