[package]
name = "kademlia-dht"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
jni = "0.21.1"
libp2p = { version = "0.56.0", features = ["kad", "tcp", "tokio", "noise", "yamux", "macros"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
