[package]
name = "kademlia-dht"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
jni = "0.21.1"
libp2p = { version = "0.53.2", features = ["tcp", "dns", "websocket", "noise", "yamux", "macros", "tokio", "kad"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
