[package]
name = "libsignal-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest"] }
hmac = "0.12.1"
jni = "0.21.1"
rand_core = "0.6.4"
sha2 = "0.10.9"
swift-bridge = "0.1.59"
x25519-dalek = "2.0.1"
