[package]
name = "phantom-core"
version = "2.0.0-alpha.3"
edition = "2021"
build = "build.rs"

[dependencies]
phantom-pqc = { path = "../phantom-pqc" }
phantom-mixnet = { path = "../phantom-mixnet" }
phantom-psi = { path = "../phantom-psi" }
phantom-mls = { path = "../phantom-mls" }
phantom-sharding = { path = "../phantom-sharding" }
phantom-dcnet = { path = "../phantom-dcnet" }
phantom-audit = { path = "../phantom-audit" }
phantom-sentinel = { path = "../phantom-sentinel" }
libsignal-ffi = { path = "../libsignal-ffi" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
jni = "0.21"
log = "0.4"
android_logger = "0.13"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
prost = "0.12"
bytes = "1.5"

[build-dependencies]
prost-build = "0.12"
