[package]
name = "phantom-mixnet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
prost = "0.12"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1.3"

[dev-dependencies]
tokio-test = "0.4"
