[package]
name = "tor-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
arti-client = { version = "0.22.0", features = ["tokio", "rustls"] }
jni = "0.21.1"
tokio = { version = "1.49.0", features = ["full"] }
tor-rtcompat = "0.22.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
