[package]
name = "tor-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
arti-client = { version = "0.22.0", default-features = false, features = ["tokio", "rustls", "compression"] }
jni = "0.21.1"
tokio = { version = "1.49.0", features = ["full"] }
tor-rtcompat = { version = "0.22.0", default-features = false, features = ["tokio", "rustls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rusqlite = { version = "0.31.0", features = ["bundled"] }
